html basics moved

--- a/html-basics/05_links_images.html
+++ b/html-basics/05_links_images.html
@@ -11,7 +11,7 @@
   <a href="https://google.com" target="_blank">Click for Google (new tab)</a>
   <br>
   <!-- Internal link -->
-  <a href="/04_typography.html">Typography</a>
+  <a href="/html-basics/04_typography.htmlography.html">Typography</a>
   <br>
 
   <!-- Local image -->
