--- a/html-basics/07_forms_input.html
+++ b/html-basics/07_forms_input.html
@@ -42,7 +42,7 @@
     <div>
       <label for="likes">I Like...</label>
       <input type="checkbox" name="membership" id="likes" value="bike" checked> Bike
-      <input type="checkbox" name="membership" value="car"> Car
+      <input type="checkbox" name="membership" id="likes" value="car"> Car
     </div>
 
 <!--    <input type="submit" value="Submit">-->
